don't fix header - too much css hassle, takes too much screen estate.

--- a/client/app/css/custom.css
+++ b/client/app/css/custom.css
@@ -253,5 +253,4 @@ select {
 
 #page-container{
   padding-top: 0px !important;
-  margin-top: -50px;
 }
