--- a/client/app/less/bcdevx/bcdevx-app.less
+++ b/client/app/less/bcdevx/bcdevx-app.less
@@ -173,7 +173,6 @@ html {
 }
 
 .navbar-stats {
-  margin: 45px 0 0 0;
   background: #555;
   line-height: 45px;
   color: #fff;
