--- a/client/app/less/shared/variables-yeti.less
+++ b/client/app/less/shared/variables-yeti.less
@@ -350,7 +350,7 @@
 
 // Basics of a navbar
 @navbar-height:                    45px;
-@navbar-margin-bottom:             @line-height-computed;
+@navbar-margin-bottom:             0px;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
